# test-task--urlencode-app

./: .gitlab-ci.yaml  .gitlab-ci.yml  HTTP-CLIENT.org  README.md  pyproject.toml
.github/workflows/: gitlab-mirror.yaml
src/core/: encode_types.py  encoders.py
src/test_task_urlencode/: app.py  handlers.py  routes.py  schemas.py
tests/api/: test_urlencode.py
tests/unit/core/: test_encode_types.py  test_encoders.py
tests/unit/test_task_urlencode/: test_handlers.py  test_schemas.py
