[tool.poetry]
name = "test-task-urlencode"
version = "0.1.0"
description = "Test task for url-unencode -> url-encode"
authors = ["SciBourne <bourne-sci-hack@yandex.ru>"]
license = "GPLv3"
# readme = "README.md"


[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.100.0"
hypercorn = "^0.14.4"
fastapi-versioning = "^0.10.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
black = "^23.1.0"
flake8 = "^6.0.0"
jedi = "^0.18.2"
yapf = "^0.32.0"
autopep8 = "^2.0.2"
mypy = "^1.1.1"
httpx = "^0.24.1"


[tool.pytest.ini_options]
addopts = "--strict-markers"
testpaths = ["tests"]

markers = [
    "unit",
    "encode_types",
    "encoders",
    "response_schemas",
    "handlers",

    "api",
    "urlencode"
]


[tool.mypy]
plugins = ["pydantic.mypy"]
pretty = true
follow_imports = "silent"
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
disallow_untyped_defs = true
ignore_missing_imports = true


[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true


[tool.poetry.scripts]
urlencode-app = "test_task_urlencode.app:run"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
